--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<link rel="stylesheet" href="lib/css/zenburn.css">
 
     <script src="assets/offline/fonts.js"></script>
-    <!--<script src="//use.typekit.net/kov3tvl.js"></script>-->
+    <script src="//use.typekit.net/kov3tvl.js"></script>
 
     <script>try{Typekit.load();}catch(e){}</script>
 
