--- a/index.html
+++ b/index.html
@@ -247,6 +247,12 @@ POST /my-shop/orders
         </section>
 
         <section>
+          <h2 class="smaller">Bigger workflows</h2>
+
+          <img src="assets/img/checkout.svg" />
+        </section>
+
+        <section>
           <h2>The Reactive Manifesto</h2>
           <h3><a href="http://www.reactivemanifesto.org/" target="_blank">http://www.reactivemanifesto.org/</a></h3>
 
