minor improvements on the first slide

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<section data-background="#febd1d">
 					<h1>Reactive e-commerce API design</h1>
 					<p>
-						<small>by Oleg Ilyenko / <a href="https://twitter.com/easyangel">@easyangel</a></small>
+						by Oleg Ilyenko / <a href="https://twitter.com/easyangel">@easyangel</a>
 					</p>
           <img src="assets/img/apidays-logo.png" class="logo-image"/>
 				</section>
@@ -65,10 +65,10 @@
               <ul class="fragment roll-in" data-fragment-index="2"><li>5 years working on e-commerce products</li></ul>
             </li>
             <li class="fragment roll-in" data-fragment-index="3">
-              Creator of Scaldi - Scala DI library
+              Creator of <strong>Scaldi</strong> - Scala DI library
             </li>
             <li class="fragment roll-in" data-fragment-index="4">
-              Author of Hacking Scala blog
+              Author of <strong>Hacking Scala</strong> blog
             </li>
             <li class="fragment roll-in" data-fragment-index="5">
               Scala Backend Engineer at commercetools GmbH
@@ -81,20 +81,19 @@
         <section>
           <h2>RESTful API design</h2>
           <ul>
-            <li>
+            <li class="fragment roll-in" data-fragment-index="1">
               Resources
-              <ul class="fragment roll-in" data-fragment-index="1"><li>Where to put the boundary?</li></ul>
+              <ul class="fragment roll-in" data-fragment-index="2"><li>Where to put the boundary?</li></ul>
             </li>
-            <li>
+            <li class="fragment roll-in" data-fragment-index="3">
               HTTP verbs
               <ul>
-                <li class="fragment roll-in" data-fragment-index="2">PUT vs POST?</li>
-                <li class="fragment roll-in" data-fragment-index="3">Semantics of POST?</li>
+                <li class="fragment roll-in" data-fragment-index="4">Semantics of POST?</li>
               </ul>
             </li>
-            <li class="fragment roll-in" data-fragment-index="4">
-              Transactions?
-              <ul class="fragment roll-in" data-fragment-index="6"><li>Scalability?</li></ul>
+            <li class="fragment roll-in" data-fragment-index="5">
+              Transactions
+              <ul class="fragment roll-in" data-fragment-index="6"><li>Scalability</li></ul>
             </li>
           </ul>
         </section>
