--- a/index.html
+++ b/index.html
@@ -176,8 +176,7 @@ POST /my-shop/orders
               <ul class="fragment roll-in" data-fragment-index="3"><li>Good for mobile clients</li></ul>
             </li>
             <li class="fragment roll-in" data-fragment-index="4"><span class="good">&#8679;</span> More control over the changes</li>
-            <li class="fragment roll-in" data-fragment-index="5"><span class="good">&#8679;</span> Scale reads and writes separately</li>
-            <li class="fragment roll-in" data-fragment-index="6"><span class="not-so-good">&#8681;</span> Not very suitable for data synchronization</li>
+            <li class="fragment roll-in" data-fragment-index="5"><span class="not-so-good">&#8681;</span> Not very suitable for data synchronization</li>
           </ul>
         </section>
 
@@ -200,7 +199,8 @@ POST /my-shop/orders
             </li>
             <li class="fragment roll-in" data-fragment-index="2">After event is saved, all business logic is already performed</li>
             <li class="fragment roll-in" data-fragment-index="3">Most normalized form of the data</li>
-            <li class="fragment roll-in" data-fragment-index="4">Point-in-time restore/view</li>
+            <li class="fragment roll-in" data-fragment-index="4"><span class="good">&#8679;</span> Point-in-time restore/view</li>
+            <li class="fragment roll-in" data-fragment-index="5"><span class="good">&#8679;</span> Scale reads and writes separately</li>
           </ul>
         </section>
 
@@ -215,7 +215,7 @@ POST /my-shop/orders
           <ul>
             <li class="fragment roll-in" data-fragment-index="1"><span class="not-so-good">&#8681;</span> Bigger database</li>
             <li class="fragment roll-in" data-fragment-index="2"><span class="not-so-good">&#8681;</span> Events need to be backwards compatible</li>
-            <li class="fragment roll-in" data-fragment-index="2"><span class="not-so-good">&#8681;</span> Eventual consistency</li>
+            <li class="fragment roll-in" data-fragment-index="3"><span class="not-so-good">&#8681;</span> Eventual consistency</li>
           </ul>
         </section>
 
